--- a/assets/style.css
+++ b/assets/style.css
@@ -61,7 +61,6 @@ header {
 section {
 	margin: 50px 0
 }
-
 h1{
 	display: flex;
 	flex-direction: column;
@@ -70,20 +69,19 @@ h1{
 	font-weight: 800;
 	color: #B1663C
 }
-
 h1 > span {
 	font-family: 'Work Sans';
 	font-size:10px;
 	letter-spacing: 0.1em;
 ;
 }
-
 h2{
 	font-family: 'Syne';
 	font-weight: 700;
 	font-size: 30px;
 	color: #1D6154
 }
+
 nav ul {
 	display: flex;
 	align-items: center;
@@ -94,10 +92,10 @@ nav li {
 	padding: 0 10px;
 	font-size: 1.2em;
 }
-
 li:hover {
 	color: #B1663C;
 }
+
 #introduction {
 	display: flex;
 	align-items: center;
@@ -110,7 +108,6 @@ li:hover {
 	margin: auto;
 	width: 80%;
 }
-
 #introduction article {
 	flex: 1
 }
@@ -121,10 +118,31 @@ li:hover {
 #introduction p {
 	margin-bottom: 0.5em;
 }
+
 #portfolio h2 {
 	text-align: center;
 	margin-bottom: 1em;
 }
+/*AJOUTS DU STYLE DES FILTRES*/
+.categories{
+	display: flex;
+	justify-content: center;
+	margin-bottom: 1em;
+	gap: 1em;
+}
+.categories span{
+	font-family: 'Syne';
+	font-size: 1.2em;
+	padding: 0.5em 1em;
+	color: #1D6154;
+	border: 1px solid #1D6154;
+	border-radius: 60px;
+}
+.categories .activeFilter{
+	color: white;
+	background: #1D6154;
+}
+/*/////*/
 .gallery {
 	width: 100%;
 	display: grid;
@@ -132,11 +150,11 @@ li:hover {
 	grid-column-gap: 20px;
 	grid-row-gap: 20px;
 }
-
 .gallery img {
 	width: 100%;
 
 }
+
 #contact {
 	width: 50%;
 margin: auto;
@@ -154,7 +172,6 @@ margin: auto;
 	display: flex;
 	flex-direction: column;
 }
-
 #contact input {
 	height: 50px;
 	font-size: 1.2em;
