--- a/assets/style.css
+++ b/assets/style.css
@@ -31,6 +31,10 @@ footer, header, hgroup, menu, nav, section {
 body {
 	line-height: 1;
 }
+a{
+	text-decoration: none;
+	color: black;
+}
 ol, ul {
 	list-style: none;
 }
@@ -92,7 +96,7 @@ nav li {
 	padding: 0 10px;
 	font-size: 1.2em;
 }
-li:hover {
+li:hover, a:hover {
 	color: #B1663C;
 }
 
@@ -203,3 +207,8 @@ footer nav ul {
 	margin: 2em
 }
 
+/*LOGIN PAGE*/
+#login p{
+	text-decoration: underline;
+	color: #3D3D3D;
+}
