--- a/assets/style.css
+++ b/assets/style.css
@@ -319,14 +319,150 @@ footer nav ul {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 1.5em;
 }
 .edit__save {
   background-color: white;
   border-radius: 1em;
   padding: 0.5em 1em;
-  color: black
+  color: black;
+  margin-left: 1em;
 }
 .edit__button{
   padding: 1em 0;
+}
+/*MODALES*/
+.hidden {
+  display: none !important;
+}
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(128, 128, 128, 0.5);
+}
+.modal__wrapper {
+  width: 33%;
+  height: max-content;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 5em;
+  gap: 0.5em;
+  background-color: white;
+}
+.modal__head {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+.modal .icons {
+  display: flex;
+  justify-content: space-between;
+}
+.modal h3 {
+  text-align: center;
+  font-size: 2em;
+}
+.modal__content {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 1em;
+  height: 60%;
+  gap: 0.5em;
+}
+.modal hr {
+  color: #b3b3b3;
+  width: 100%;
+}
+.modal__actions {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.modal__actions .btn {
+  background-color: #1d6154;
+  color: white;
+  border-radius: 2em;
+  padding: 1em 2em;
+}
+.modal__actions .delete {
+  color: #d65353;
+  font-size: smaller;
+  margin-top: 0.5em;
+}
+/*Modal 1 : Galerie Photo*/
+.modal .modal1 {
+  justify-content: flex-end;
+}
+.modal__content figure {
+  width: 18%;
+  position: relative;
+}
+.modal__content img {
+  width: 100%;
+}
+.modal__content .modal__deleteIcon {
+  position: absolute;
+  right: 0.5em;
+  top: 0.5em;
+  background-color: black;
+}
+
+/*Modale 2 : Ajout de Photo*/
+.modal__content--flex{
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.addImg{
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #E8F1F6;
+}
+
+/* .imgSelect {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: rgb(193, 193, 255);
+  padding: 1em;
+  gap: 0.5em;
+}
+.imgIcon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: aliceblue;
+  width: 3em;
+  height: 3em;
+  color: grey;
+}
+.imgAdd {
+  background-color: rgb(194, 194, 194);
+  border-radius: 1em;
+  padding: 0.5em 1em;
+  color: rgb(114, 114, 255);
+}
+.imgPrerequis {
+  font-size: small;
+  color: rgba(0, 0, 0, 0.707);
+}
+.imgDesc {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5em;
+}
+.imgDesc input {
+  box-shadow: 0 0.5em 1em rgba(137, 137, 137, 0.284);
+} */
+.modal__actions .btn--disabled {
+  background-color: grey;
+  color: white;
 }
