--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -132,6 +132,9 @@ table {
   border-spacing: 0;
 }
 /** end reset css**/
+header, main{
+  padding: 0 10%; /*?????*/
+}
 body {
   max-width: 1140px;
   margin: auto;
@@ -295,6 +298,10 @@ footer nav ul {
   justify-content: flex-end;
   margin: 2em;
 }
+.hidden
+{
+  display:none !important;
+}
 /*LOGIN PAGE*/
 #login p {
   text-decoration: underline;
@@ -306,10 +313,6 @@ footer nav ul {
   margin-bottom: 2em;
   font-style: italic;
   color: rgb(144, 0, 0);
-}
-.hidden
-{
-  display:none;
 }
 /*EDIT HEADER*/
 .edit {
@@ -337,11 +340,7 @@ footer nav ul {
 .edit i, .edit__button i{
   padding-right: 0.25em;
 }
-
 /*MODALES*/
-.hidden {
-  display: none !important;
-}
 .modal {
   position: fixed;
   top: 0;
@@ -355,8 +354,8 @@ footer nav ul {
   margin: 0;
 }
 .wrapper {
-  width: 33%;
-  height: 70%;
+  width: 30%;
+  height: 80%;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
